<resources>
    <string name="app_name">Easy Finance</string>

    <!--ACTIONS-->
    <string name="action_ok">OK</string>
    <string name="action_ok_understood">OK, ENTENDI</string>
    <string name="action_yes">SIM</string>
    <string name="action_not">NÃO</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_change">Alterar</string>
    <string name="action_try_again">Tentar novamente</string>
    <string name="action_continue">Continuar</string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_clear">Limpar</string>
    <string name="action_save">Salvar</string>
    <string name="action_enter">Entrar</string>
    <string name="action_sign_up">Inscreva-se</string>
    <string name="action_create_account">Criar Conta</string>
    <string name="action_enter_again">Entrar novamente</string>
    <string name="action_app_enter">ENTRAR NO APLICATIVO</string>
    <string name="action_accept">LI E ESTOU DE ACORDO</string>
    <string name="action_personal_data">Dados Pessoais</string>
    <string name="action_address">Endereço</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_share">COMPARTILHAR</string>
    <string name="action_share_via">Compartilhar através de</string>
    <string name="welcome">Bem Vindo</string>
    <string name="placeholder_email">EMAIL</string>
    <string name="placeholder_password">SENHA</string>
    <string name="notHasAccount">Não tem uma conta? <b>Inscreva-se aqui</b></string>
    <string name="hasAccount">Já tem uma conta?  <b>Entre aqui</b></string>
    <string name="create_account_message">É rápido, só precisamos de um email e da sua senha</string>
    <string name="dashBoard">DashBoard</string>
    <string name="wallet">Carteira</string>
    <string name="dashboard_income_title">RECEITA</string>
    <string name="dashboard_spending_title">DESPESAS</string>
    <string name="dashboard_input">ENTRADAS</string>
    <string name="dashboard_output">SAÍDAS</string>
    <string name="controller">Gestão</string>
    <string name="action_add">Adicionar</string>
    <string name="wallet_value_10">10</string>
    <string name="wallet_value_50">50</string>
    <string name="wallet_value_100">100</string>
    <string name="wallet_value_1000">1000</string>
    <string name="balance"><b>Saldo:</b> %s</string>
    <string name="label_description">Descrição</string>
    <string name="label_value">Valor</string>
    <string name="label_payment">Pago</string>
    <string name="label_type">Tipo</string>
    <string name="label_spending"><b>Despesa: R$</b> %s</string>
    <string name="error_description">A descrição não pode ser vazia</string>
    <string name="error_value">Valor inválido</string>
    <string name="error_type">Selecione uma categoria</string>
    <string name="placeholder_empty_label">Não existem resultados</string>
    <string name="placeholder_error_button_label">Tentar novamente</string>

    <string name="currency_value">R$ %s</string>
    <string name="good_finance">Suas finanças estão indo bem &#128526;</string>
    <string name="bad_finance">Suas finanças estão indo mau &#129300;</string>
    <string name="empty_title">Você ainda não possui saídas, entre em gestão e inclua sua primeira saída</string>
    <string name="no_data_set"><font size="20">Sem dados para mostrar no momento</font></string>
    <string name="balanced_finance">Suas Finanças estão equilibradas &#128522;</string>
</resources>