<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/dashBoardPieChart"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/verticalMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dashBoardNoDataTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginEnd="@dimen/horizontalMargin"
            android:text="@string/no_data_set"
            android:textAlignment="center"
            android:theme="@style/Text_Easy"
            app:layout_constraintBottom_toBottomOf="@+id/dashBoardPieChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dashBoardPieChart" />

        <TextView
            android:id="@+id/dashBoardStatusTv"
            style="@style/Text_Easy.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:text="@string/good_finance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashBoardPieChart" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dashBoardIncomeCv"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_card_size"
            app:cardCornerRadius="@dimen/cornerMedium"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/color_primary"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginEnd="@dimen/horizontalMarginSmall"
            app:layout_constraintEnd_toStartOf="@+id/dashBoardSpendingCv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashBoardStatusTv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardItem_Easy"
                android:background="@color/colorGreen"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dashBoardIncomeTitleTv"
                    style="@style/Text_Easy.Body"
                    android:textColor="@color/color_on_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_income_title"
                    android:layout_marginTop="@dimen/verticalMargin"
                    android:layout_marginStart="@dimen/horizontalMargin"
                    android:layout_marginEnd="@dimen/horizontalMargin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dashBoardIncomeValueTv"
                    style="@style/Text_Easy"
                    android:textSize="@dimen/text_subtitle_small"
                    android:textColor="@color/color_on_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontalMargin"
                    android:layout_marginTop="@dimen/verticalMargin"
                    android:layout_marginEnd="@dimen/horizontalMargin"
                    android:layout_marginBottom="@dimen/verticalMargin"
                    android:text="R$100,00"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashBoardIncomeTitleTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dashBoardSpendingCv"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_card_size"
            app:cardCornerRadius="@dimen/cornerMedium"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/color_primary"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginStart="@dimen/horizontalMarginSmall"
            android:layout_marginEnd="@dimen/horizontalMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dashBoardIncomeCv"
            app:layout_constraintTop_toBottomOf="@+id/dashBoardStatusTv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorRed"
                style="@style/CardItem_Easy">

                <TextView
                    android:id="@+id/dashBoardSpendingTitleTv"
                    style="@style/Text_Easy.Body"
                    android:textColor="@color/color_on_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_spending_title"
                    android:layout_marginTop="@dimen/verticalMargin"
                    android:layout_marginStart="@dimen/horizontalMargin"
                    android:layout_marginEnd="@dimen/horizontalMargin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dashBoardSpendingValueTv"
                    style="@style/Text_Easy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_subtitle_small"
                    android:textColor="@color/color_on_primary"
                    android:layout_marginStart="@dimen/horizontalMargin"
                    android:layout_marginTop="@dimen/verticalMargin"
                    android:layout_marginEnd="@dimen/horizontalMargin"
                    android:layout_marginBottom="@dimen/verticalMargin"
                    android:text="@string/currency_value"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashBoardSpendingTitleTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/Text_Easy.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginEnd="@dimen/horizontalMargin"
            android:text="@string/dashboard_output"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashBoardIncomeCv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dashBoardOutputRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginEnd="@dimen/horizontalMargin"
            android:layout_marginBottom="@dimen/verticalMargin"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:itemCount="4"
            tools:listitem="@layout/item_spending" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>